--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
 <!-- <base href="https://fs8.formsite.com/1GNJPX/" /> -->
-<title>Telco Customer Churn</title>
+<!-- <title>Telco Customer Churn</title>
 <link rel="stylesheet" media="all" href="/include/form/fonts8.css?2172824315944" />
 <link rel="stylesheet" media="all" href="/include/form/screen8.css?2172824315944" />
 <link rel="stylesheet" media="print" href="/include/form/print8.css?2172824315944" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" media="screen" href="/include/form/responsive8.css?2172824315944" />
+<link rel="stylesheet" media="screen" href="/include/form/responsive8.css?2172824315944" /> -->
 <style media="all">
 /* LOOK AND FEEL */
 body {
@@ -71,7 +69,7 @@ body {
 	padding: 10px;
 	margin-bottom: 15px;
 	margin-left: 15px;
-	float: left;
+	/* float: left; */
 	display: block;
 }
 
@@ -308,13 +306,20 @@ tr.highlight td {
 	border-radius: 4px;
 	background: #1282a2;
 }
+img.ddd {
+    width: 98%;
+    padding-top: 15px;
+    height: 145%;
+}
+
 </style>
 <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 <script src="/include/form/form8.js?2172824315944"></script> -->
 </head>
 <body>
-<form method="post" id="FSForm" action="{{ url_for('predict')}}">
+<form action="{{ url_for('predict')}}"method="post">
+<!-- <form method="post" id="FSForm" action="{{ url_for('predict')}}" enctype="application/x-www-form-urlencoded" onsubmit="return Vromansys.Form.processSubmit(this);"> -->
 <!-- BEGIN_ITEMS -->
 <div class="form_table">
 
@@ -322,7 +327,7 @@ tr.highlight td {
 
 <div id="q39" class="q full_width">
 <a class="item_anchor" name="ItemAnchor0"></a>
-<div style="text-align:left;"><img src="https://www.voxco.com/wp-content/uploads/2021/09/Everything-you-need-to-know-about-Customer-Churn1.jpg" alt="" /></div>
+<div style="text-align:left;"><img src="https://www.voxco.com/wp-content/uploads/2021/09/Everything-you-need-to-know-about-Customer-Churn1.jpg" alt="" style="/* width: 98%; *//* align-self: center; */" class="ddd"></div>
 </div>
 
 <div class="clear"></div>
@@ -343,12 +348,12 @@ tr.highlight td {
 
 <div class="clear"></div>
 
-<div id="q59" class="q required">
-<a class="item_anchor" name="ItemAnchor3"></a>
-<span class="question top_question">Gender that customer identifies with?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_0" value="Radio-0" checked /><label for="RESULT_RadioButton-3_0">Male</label><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_1" value="Radio-1" /><label for="RESULT_RadioButton-3_1">Female</label></tr>
-</table>
+
+<div id="q43" class="q required">
+    <a class="item_anchor" name="ItemAnchor6"></a>
+    <label class="question top_question" for="RESULT_TextField-6">Tenure&nbsp;<b class="icon_required" style="color:#F00">*</b></label>
+    <!-- <input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" value="50" /> -->
+    <input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" />  
 </div>
 
 <div class="clear"></div>
@@ -357,7 +362,7 @@ tr.highlight td {
 <a class="item_anchor" name="ItemAnchor4"></a>
 <span class="question top_question">Does the customer qualify as a Senior citizen (>=65)&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
 <table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_0" value="Radio-0" /><label for="RESULT_RadioButton-4_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_1" value="Radio-1" /><label for="RESULT_RadioButton-4_1">No</label></tr>
+<tr><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_0" value="0" /><label for="RESULT_RadioButton-4_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_1" value="1" /><label for="RESULT_RadioButton-4_1">No</label></tr>
 </table>
 </div>
 
@@ -367,17 +372,21 @@ tr.highlight td {
 <a class="item_anchor" name="ItemAnchor5"></a>
 <span class="question top_question">Does the customer have a partner with whom they utilize Telco services?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
 <table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_0" value="Radio-0" /><label for="RESULT_RadioButton-5_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_1" value="Radio-1" /><label for="RESULT_RadioButton-5_1">No</label></tr>
+<tr><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_0" value="0" /><label for="RESULT_RadioButton-5_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_1" value="1" /><label for="RESULT_RadioButton-5_1">No</label></tr>
 </table>
 </div>
 
 <div class="clear"></div>
 
-<div id="q43" class="q required">
-<a class="item_anchor" name="ItemAnchor6"></a>
-<label class="question top_question" for="RESULT_TextField-6">Tenure&nbsp;<b class="icon_required" style="color:#F00">*</b></label>
-<input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" value="50" />
-</div>
+<div id="q59" class="q required">
+    <a class="item_anchor" name="ItemAnchor3"></a>
+    <span class="question top_question">Gender that customer identifies with?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
+    <table class="inline_grid choices">
+    <tr><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_0" value="0" checked /><label for="RESULT_RadioButton-3_0">Male</label><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_1" value="1" /><label for="RESULT_RadioButton-3_1">Female</label></tr>
+    </table>
+    </div>
+
+<div class="clear"></div>
 
 <div id="q73" class="q full_width">
 <a class="item_anchor" name="ItemAnchor15"></a>
@@ -386,13 +395,18 @@ tr.highlight td {
 
 <div class="clear"></div>
 
-<div id="q79" class="q full_width">
+<div class="outside_container">
+<!--     <div class="buttons_reverse"><input type="submit" name="Submit" value="Make Prediction" class="submit_button" id="FSsubmit" /></div> -->
+    <button type="submit" class="submit_button">Predict</button>
+    </div>
+
+<div id="q79" class="q full_width"> -->
 <a class="item_anchor" name="ItemAnchor16"></a>
 <div class="full_width_space"><div>
-<div style="text-align: left;"><span style="font-size: 13px; font-family: 'Roboto Slab', serif;">Enter the customer's demographic and product usage information to determine the likelihood of Churn.</span></div>
+<div style="text-align: left;"><span style="font-size: 13px; font-family: 'Roboto Slab', serif;">{{ prediction_text }}</span></div>
 </div></div>
-</div>
-
+<!-- <!-- </div> -->
+<!-- {{ prediction_text }} -->
 <div class="clear"></div>
 
 <div style="position:relative;font-family:'Open Sans',Helvetica,Arial,sans-serif;font-size:12px;line-height:36px;text-align:center;background-color:#FAFAFA;height:35px;margin-top:10px;overflow:hidden;">
@@ -400,9 +414,6 @@ tr.highlight td {
 </div>
 </div>
 <!-- END_ITEMS -->
-<div class="outside_container">
-<div class="buttons_reverse"><input type="submit" name="Submit" value="Make Prediction" class="submit_button" /></div>
-</div>
 </form>
 </body>
 </html>
