--- a/templates/index.html
+++ b/templates/index.html
@@ -366,7 +366,7 @@ table.inline_grid.choices {
     <a class="item_anchor" name="ItemAnchor6"></a>
     <label class="question top_question" for="RESULT_TextField-6">How many tenure years has the customer been a Telco customer?&nbsp;<b class="icon_required" style="color:#F00">*</b></label><br/><br/>
 
-    <input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" value="50" />  
+    <input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" value="20" />  
 </div>
 
 <div class="clear"></div>
@@ -375,7 +375,7 @@ table.inline_grid.choices {
 <a class="item_anchor" name="ItemAnchor4"></a>
 <span class="question top_question">Does the customer qualify as a Senior citizen (>=65)&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
 <table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_0" value="1" /><label for="RESULT_RadioButton-4_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_1" value="0" /><label for="RESULT_RadioButton-4_1">No</label></tr>
+<tr><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_0" value="1" checked/><label for="RESULT_RadioButton-4_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_1" value="0" /><label for="RESULT_RadioButton-4_1">No</label></tr>
 </table>
 </div>
 
@@ -385,7 +385,7 @@ table.inline_grid.choices {
 <a class="item_anchor" name="ItemAnchor5"></a>
 <span class="question top_question">Does the customer have a partner with whom they utilize Telco services?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
 <table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_0" value="1" /><label for="RESULT_RadioButton-5_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_1" value="0" /><label for="RESULT_RadioButton-5_1">No</label></tr>
+<tr><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_0" value="1" checked/><label for="RESULT_RadioButton-5_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_1" value="0" /><label for="RESULT_RadioButton-5_1">No</label></tr>
 </table>
 </div>
 
@@ -406,7 +406,7 @@ table.inline_grid.choices {
 <a class="item_anchor" name="ItemAnchor7"></a>
 <span class="question top_question">Has the customer opted for Telco's phone services?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
 <table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_0" value="1" /><label for="RESULT_RadioButton-7_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_1" value="0" /><label for="RESULT_RadioButton-7_1">No</label></tr>
+<tr><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_0" value="1" checked/><label for="RESULT_RadioButton-7_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_1" value="0" /><label for="RESULT_RadioButton-7_1">No</label></tr>
 </table>
 </div>
 
